# switch-hal

./: Cargo.toml  README.md
.github/workflows/: rust.yml
adr/: use-phantom-data-to-reduce-duplication.md
src/: lib.rs  mock.rs
src/input/: mod.rs
src/output/: mod.rs
tests/: input.rs  output.rs  output_switch.rs  pin_into_switch.rs
