[package]
name = "switch-hal"
version = "0.3.0"
authors = ["Christopher J. McClellan <chris.mcclellan203@gmail.com>"]
edition = "2018"
description = "HAL and basic implementations for input and output switches (buttons, switches, leds, transistors)"
repository = "https://github.com/rubberduck203/switch-hal"
documentation = "https://docs.rs/crate/switch-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal", "embedded-hal-driver", "led", "button"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embedded-hal]
version = "0.2.3"
features = [ "unproven" ]